--- a/FreeRTOS.ioc
+++ b/FreeRTOS.ioc
@@ -1,4 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
+ADC1.IPParameters=Rank-7\#ChannelRegularConversion,master,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-7\#ChannelRegularConversion=1
+ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 FREERTOS.CountingSemaphores01=BigMac,100,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_COUNTING_SEMAPHORES,CountingSemaphores01,FootprintOK,Queues01
@@ -23,18 +29,19 @@ I2S3.RealAudioFreq=89.285 KHz
 I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=FREERTOS
-Mcu.IP1=I2C1
-Mcu.IP10=USB_OTG_FS
-Mcu.IP2=I2S2
-Mcu.IP3=I2S3
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=USART1
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=11
+Mcu.IP0=ADC1
+Mcu.IP1=FREERTOS
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_FS
+Mcu.IP2=I2C1
+Mcu.IP3=I2S2
+Mcu.IP4=I2S3
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI1
+Mcu.IP8=SYS
+Mcu.IP9=USART1
+Mcu.IPNb=12
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -70,21 +77,23 @@ Mcu.Pin35=PB6
 Mcu.Pin36=PB7
 Mcu.Pin37=PB9
 Mcu.Pin38=PE1
-Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin39=VP_ADC1_TempSens_Input
 Mcu.Pin4=PC14-OSC32_IN
-Mcu.Pin40=VP_SYS_VS_tim1
-Mcu.Pin41=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin41=VP_SYS_VS_tim1
+Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC15-OSC32_OUT
 Mcu.Pin6=PH0 - OSC_IN
 Mcu.Pin7=PH1 - OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC2
-Mcu.PinsNb=42
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
 MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.ForceEnableDMAVector=true
@@ -346,7 +355,7 @@ RCC.HCLKFreq_Value=96000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=160000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLM,PLLP,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLM,PLLP,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=96000000
 RCC.PLLCLKFreq_Value=96000000
@@ -356,7 +365,6 @@ RCC.PLLM=4
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=8
 RCC.PLLQCLKFreq_Value=48000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=96000000
@@ -387,6 +395,8 @@ USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_ADC1_TempSens_Input.Mode=IN-TempSens
+VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
